@@ -1,16 +1,16 @@
 package se.krka.futures;
 
-import com.google.common.collect.ImmutableList;
-import com.spotify.futures.CompletableFuturesExtra;
+import com.spotify.futures.CompletableFutures;
 import org.junit.Test;
 
+import java.util.List;
 import java.util.concurrent.CancellationException;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
 
 public class ExceptionTest {
 
-  private static final ImmutableList<Class<? extends Throwable>> EXPECTED = ImmutableList.of(
+  private static final List<Class<? extends Throwable>> EXPECTED = List.of(
           CompletionException.class,
           IllegalArgumentException.class
   );
@@ -28,13 +28,13 @@ public class ExceptionTest {
   @Test
   public void testExceptionTypeComposedReturn() {
     Util.assertException(CompletableFuture.completedFuture("value")
-            .thenCompose(s -> CompletableFuturesExtra.exceptionallyCompletedFuture(new IllegalArgumentException())), EXPECTED);
+            .thenCompose(s -> CompletableFutures.exceptionallyCompletedFuture(new IllegalArgumentException())), EXPECTED);
   }
 
   @Test
   public void testExceptionTypeComposeWrapped() {
     Util.assertException(CompletableFuture.completedFuture("value")
-            .thenCompose(s -> CompletableFuturesExtra.exceptionallyCompletedFuture(new CompletionException(new IllegalArgumentException()))), EXPECTED);
+            .thenCompose(s -> CompletableFutures.exceptionallyCompletedFuture(new CompletionException(new IllegalArgumentException()))), EXPECTED);
   }
 
   @Test
@@ -60,7 +60,7 @@ public class ExceptionTest {
   public void testCancelException() {
     CompletableFuture<Object> future = new CompletableFuture<>();
     future.cancel(true);
-    Util.assertException(future, ImmutableList.of(CancellationException.class));
+    Util.assertException(future, List.of(CancellationException.class));
   }
 
 }
